# video-slide-converter

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py
src/component/: download_zip_images.py
src/schema/image/: __init__.py  base.py
src/video_slide_converter/: __init__.py  base.py
video_slide_converter/: base.py
