[project]
name = "video-slide-converter"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Tsubasa Takaoka", email = "tt.wing2838783@gmail.com" }
]
dependencies = [
    "pydantic>=2.6.3",
    "streamlit>=1.32.0",
    "pillow>=10.2.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
dev = "streamlit run src/main.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/video_slide_converter"]

[tool.poetry]
name = "video-slide-converter"
version = "0.1.0"
description = "slide image to video converter"
authors = ["Tsubasa Takaoka"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.6.3"
streamlit = "^1.32.0"
pillow = "^10.2.0"